Fixed formatting and removed horizontal scrolling

--- a/www/supplements.css
+++ b/www/supplements.css
@@ -6,6 +6,7 @@ body{
     background:url(http://michaelmyersfit.com/wp-content/uploads/2014/07/background.jpg);
     background-size:cover;
     width:100%;
+    overflow-x: hidden;
     
 }
 p{
@@ -70,7 +71,7 @@ margin:auto;
 #supplementList>amino_acids>ul{
     position:relative;
     top:-200px;
-    left:400px;
+    left:100px;
 }
 #supplementList>multi_vitamins>p{
 margin:auto;
@@ -105,7 +106,7 @@ margin:auto;
 #supplementList>fish_oil>ul{
     position:relative;
     top:-200px;
-    left:400px;
+    left:100px;
 }
 #supplementList>bcaa>p{
 margin:auto;
@@ -134,7 +135,7 @@ margin:auto;
 #supplementlist>pre_workout>h7{
    position:relative;
     top:-200px;
-    left:850px;
+    left:500px;
     text-align: center;
     font-size: 32;
 }
